--- a/css/custom.css
+++ b/css/custom.css
@@ -593,6 +593,11 @@ footer svg{
     font-weight: 700;
 }
 
+button:hover{
+    cursor: pointer;
+}
+
+
 @media (min-width: 576px) { 
     .card-grid{
         display: grid;
